package com.example.people.util

object TestTags {
    const val peopleTab = "people_tab"
    const val settingsTab = "settings_tab"
    const val personItem = "person_item"
    const val createBtn = "create_btn"
    const val submitBtn = "submit_btn"
    const val themeSwitch = "theme_switch"

    const val firstName = "First Name"
    const val lastName = "Last Name"
    const val job = "Job"
}