...
import com.example.people.util.TestTags

@OptIn(ExperimentalMaterial3Api::class)
@Composable
fun IndexScreen(navigator: NavController) {
    val index = remember { mutableStateOf(0) }
    val pageHeaders = listOf("People", "Settings")

    Scaffold(
        containerColor = MaterialTheme.colorScheme.surface,
        topBar = {
            TopAppBar(
                title = { Text(text = pageHeaders[index.value]) },
...
