...
    val context = LocalContext.current

    Scaffold(
        containerColor = MaterialTheme.colorScheme.surface,
        topBar = {
            TopAppBar(
                title = { Text(text = "Create") },
            )
        },
    ) {
        Box(
            modifier = Modifier.padding(
                top = it.calculateTopPadding(),
...
